# hw10-personal-assistant-with-mongodb

./: README.md  config.ini  pyproject.toml
assistant/: setup.py
assistant/assistant/: contact_book.py  decorators.py  main.py  note_book.py
assistant/assistant/database/: connect.py  crud_contact.py  crud_note.py  models.py
fill_database/: contacts.py  notes.py
